This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
http://mpc-hc.svn.sourceforge.net/viewvc/mpc-hc/trunk/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.2.X - Not released yet
==============================
* Ticket #734, A unicode encoding will now be used for the ini file. Old ASCII
  ini files will be automatically converted to unicode. Favorites with unicode
  filenames are now correctly handled when using an ini file
* Ticket #1733/#2029, Include subfolders when opening a folder using the command
  line or via the explorer context menu
* Reduced the maximum number of packets in the Queue, except for AVI. This will
  reduce the amount of memory consumed by the player
* Updated ffmpeg
* Updated French, Turkish and Czech translations
! Broken playback and picture on H.264 & MPEG2 interlaced with DXVA on
  intergrated Intel adapter
! Ticket #1182, Unable to playback MPEG2 in AVI
! Ticket #1589, Crash with "Null (uncompressed)"
! Ticket #1946, Skipping bug with EVR custom output and .webm with vsync on
! Ticket #2090, Better handling of font fallback in the MediaInfo dialog so that
  the font size is now correctly adapted to the font used
! Ticket #2133, Javascript error in "player.html"
! Ticket #2137, Disable animation when pressing the "Boss" key
! Ticket #2156, Decoder must deliver all the output data at the end of stream
! The settings location is now changed only when applying the changes in the
  options dialog instead of immediately after changing the state of the checkbox